# yolox-training

./: pyproject.toml
boosttrack/: my_dataset.py  my_detector.py  my_main.py
exps/custom/: base_exp.py  head_nano.py  my_mix_mot20_mot_ch.py  my_mix_mot20_mot_ch_nano.py  my_mix_mot20_mot_ch_x.py  my_mix_x.py  my_nano.py  my_nano_seq_02.py  my_s.py  my_x.py
exps/mot/: yolox_l_mix_det.py  yolox_m_mix_det.py  yolox_nano_mix_det.py  yolox_s_mix_det.py  yolox_tiny_mix_det.py  yolox_x_mix_det.py
exps/swyolox/: swyolox_nano_mix_mot20.py  swyolox_x_mix_mot20.py
swyolox/models/: __init__.py  swyolo_pafpn.py  swyolox_block.py
tools/: coco_head_annotations.py  coco_sequence_annotator.py  coco_to_torchreid.py  coco_to_yolo.py  convert_ch_to_coco.py  convert_ethz_to_coco.py  convert_mot20_to_coco.py  convert_mot20_to_yolo.py  data_mixer.py  track_merger_cli.py  videos_to_coco.py
