[project]
name = "yolox-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "ninja>=1.11.1.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "psutils>=3.3.9",
    "pycocotools>=2.0.8",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
